[workspace]
members = [
    "crates/torsten-primitives",
    "crates/torsten-crypto",
    "crates/torsten-serialization",
    "crates/torsten-network",
    "crates/torsten-consensus",
    "crates/torsten-ledger",
    "crates/torsten-mempool",
    "crates/torsten-storage",
    "crates/torsten-node",
    "crates/torsten-cli",
    "crates/torsten-lsm",
    "crates/torsten-integration-tests",
    "crates/torsten-monitor",
    "crates/torsten-config",
    "tests/conformance",
    "tests/golden",
]
resolver = "2"

[workspace.package]
version = "0.4.6-alpha"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/michaeljfazio/torsten"
description = "Torsten - A Rust implementation of the Cardano node"

[workspace.dependencies]
# Workspace crates
torsten-primitives = { path = "crates/torsten-primitives" }
torsten-crypto = { path = "crates/torsten-crypto" }
torsten-serialization = { path = "crates/torsten-serialization" }
torsten-network = { path = "crates/torsten-network" }
torsten-consensus = { path = "crates/torsten-consensus" }
torsten-ledger = { path = "crates/torsten-ledger" }
torsten-mempool = { path = "crates/torsten-mempool" }
torsten-storage = { path = "crates/torsten-storage" }
torsten-node = { path = "crates/torsten-node" }
torsten-cli = { path = "crates/torsten-cli" }
torsten-lsm = { path = "crates/torsten-lsm" }
torsten-monitor = { path = "crates/torsten-monitor" }

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Serialization
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
minicbor = { version = "0.25", features = ["std", "derive"] }
hex = "0.4"
base64 = "0.22"

# Cryptography
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
blake2 = "0.10"
blake2b_simd = "1"
sha2 = "0.10"
rand = "0.8"
rand_chacha = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
futures = "0.3"
async-trait = "0.1"

# Networking
tokio-tungstenite = "0.24"
pallas-network = "1.0.0-alpha.5"
pallas-codec = "1.0.0-alpha.5"
pallas-primitives = "1.0.0-alpha.5"
pallas-traverse = "1.0.0-alpha.5"
pallas-crypto = { version = "1.0.0-alpha.5", features = ["kes"] }
pallas-addresses = "1.0.0-alpha.5"
vrf_dalek = { git = "https://github.com/input-output-hk/vrf", rev = "03ac038e9b92c754ebbcb71824866d93f25e27f3" }
curve25519-dalek-fork = { package = "curve25519-dalek", git = "https://github.com/iquerejeta/curve25519-dalek", branch = "ietf03_vrf_compat_ell2" }

# Storage
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

# Logging & diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tracing-journald = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Misc
bytes = "1"
byteorder = "1"
derive_more = { version = "1", features = ["display", "from"] }
dashmap = "6"
parking_lot = "0.12"
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
dashu-int = "0.4.1"
dashu-base = "0.4.1"
chrono = { version = "0.4", features = ["serde"] }
bech32 = "0.11"
base16ct = { version = "0.2", features = ["alloc"] }
bs58 = "0.5"
bincode = "1"
uplc = { git = "https://github.com/aiken-lang/aiken.git", rev = "6806d52211fbb469ae13aa0e0290aeb6b9b3e8cf" }
crc32fast = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "json"], default-features = false }
libc = "0.2"
hickory-resolver = "0.25"
socket2 = "0.5"
zstd = "0.13"
tar = "0.4"
indicatif = "0.17"
futures-util = "0.3"
memmap2 = "0.9"
fs2 = "0.4"
rayon = "1"
proptest = "1"

## [patch.crates-io]
## Removed: cardano-lsm now used from crates.io (for UTxO store in torsten-ledger)

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
