[package]
name = "torsten-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
torsten-serialization = { path = "../crates/torsten-serialization" }
torsten-network = { path = "../crates/torsten-network" }
torsten-primitives = { path = "../crates/torsten-primitives" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_decode_block"
path = "fuzz_targets/decode_block.rs"
doc = false

[[bin]]
name = "fuzz_decode_transaction"
path = "fuzz_targets/decode_transaction.rs"
doc = false

[[bin]]
name = "fuzz_mux_segment"
path = "fuzz_targets/mux_segment.rs"
doc = false

[[bin]]
name = "fuzz_nonce_update"
path = "fuzz_targets/nonce_update.rs"
doc = false
