[package]
name = "dugite-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bincode = "1"
minicbor = { version = "0.25", features = ["std"] }
dugite-serialization = { path = "../crates/dugite-serialization" }
dugite-network = { path = "../crates/dugite-network" }
dugite-primitives = { path = "../crates/dugite-primitives" }
dugite-ledger = { path = "../crates/dugite-ledger" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_decode_block"
path = "fuzz_targets/decode_block.rs"
doc = false

[[bin]]
name = "fuzz_decode_transaction"
path = "fuzz_targets/decode_transaction.rs"
doc = false

[[bin]]
name = "fuzz_mux_segment"
path = "fuzz_targets/mux_segment.rs"
doc = false

[[bin]]
name = "fuzz_nonce_update"
path = "fuzz_targets/nonce_update.rs"
doc = false

[[bin]]
name = "fuzz_n2c_query"
path = "fuzz_targets/n2c_query.rs"
doc = false

[[bin]]
name = "fuzz_handshake"
path = "fuzz_targets/handshake.rs"
doc = false

[[bin]]
name = "fuzz_chainsync_msg"
path = "fuzz_targets/chainsync_msg.rs"
doc = false

[[bin]]
name = "fuzz_protocol_params"
path = "fuzz_targets/protocol_params.rs"
doc = false

[[bin]]
name = "fuzz_address"
path = "fuzz_targets/address.rs"
doc = false

[[bin]]
name = "fuzz_governance"
path = "fuzz_targets/governance.rs"
doc = false

[[bin]]
name = "fuzz_ledger_snapshot"
path = "fuzz_targets/ledger_snapshot.rs"
doc = false
