[package]
name = "dugite-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bincode = "1"
minicbor = { version = "0.25", features = ["std"] }
dugite-serialization = { path = "../crates/dugite-serialization" }
dugite-network = { path = "../crates/dugite-network" }
dugite-primitives = { path = "../crates/dugite-primitives" }
dugite-ledger = { path = "../crates/dugite-ledger" }
dugite-mempool = { path = "../crates/dugite-mempool" }
dugite-lsm = { path = "../crates/dugite-lsm" }
tempfile = "3"
tokio = { version = "1", features = ["rt"] }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_decode_block"
path = "fuzz_targets/decode_block.rs"
doc = false

[[bin]]
name = "fuzz_decode_transaction"
path = "fuzz_targets/decode_transaction.rs"
doc = false

[[bin]]
name = "fuzz_nonce_update"
path = "fuzz_targets/nonce_update.rs"
doc = false

[[bin]]
name = "fuzz_handshake"
path = "fuzz_targets/handshake.rs"
doc = false

[[bin]]
name = "fuzz_chainsync_msg"
path = "fuzz_targets/chainsync_msg.rs"
doc = false

[[bin]]
name = "fuzz_protocol_params"
path = "fuzz_targets/protocol_params.rs"
doc = false

[[bin]]
name = "fuzz_address"
path = "fuzz_targets/address.rs"
doc = false

[[bin]]
name = "fuzz_governance"
path = "fuzz_targets/governance.rs"
doc = false

[[bin]]
name = "fuzz_ledger_snapshot"
path = "fuzz_targets/ledger_snapshot.rs"
doc = false

[[bin]]
name = "fuzz_tx_validation"
path = "fuzz_targets/tx_validation.rs"
doc = false

[[bin]]
name = "fuzz_block_apply"
path = "fuzz_targets/block_apply.rs"
doc = false

[[bin]]
name = "fuzz_encode_roundtrip"
path = "fuzz_targets/encode_roundtrip.rs"
doc = false

[[bin]]
name = "fuzz_lsm_operations"
path = "fuzz_targets/lsm_operations.rs"
doc = false

[[bin]]
name = "fuzz_mempool_admission"
path = "fuzz_targets/mempool_admission.rs"
doc = false

[[bin]]
name = "fuzz_epoch_transition"
path = "fuzz_targets/epoch_transition.rs"
doc = false
