[package]
name = "dugite-cli"
version.workspace = true
edition.workspace = true
description = "CLI tool for Dugite Cardano node (cardano-cli compatible)"

[[bin]]
name = "dugite-cli"
path = "src/main.rs"

[dependencies]
dugite-primitives = { workspace = true }
dugite-crypto = { workspace = true }
dugite-serialization = { workspace = true }
dugite-network = { workspace = true }
dugite-consensus = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
bech32 = { workspace = true }
minicbor = { workspace = true }
rand = { workspace = true }
