[package]
name = "dugite-crypto"
version.workspace = true
edition.workspace = true
description = "Cryptographic primitives for the Dugite Cardano node"

[dependencies]
dugite-primitives = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
minicbor = { workspace = true }
vrf_dalek = { workspace = true }
curve25519-dalek-fork = { workspace = true }
pallas-crypto = { workspace = true }
dashu-int = { workspace = true }
dashu-base = { workspace = true }
zeroize = "1.8.2"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "crypto_bench"
harness = false
