[package]
name = "dugite-ledger"
version.workspace = true
edition.workspace = true
description = "Ledger rules and UTxO management for Dugite"

[dependencies]
dugite-primitives = { workspace = true }
dugite-crypto = { workspace = true }
dugite-serialization = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
num-bigint = { workspace = true }
num-rational = { workspace = true }
num-traits = { workspace = true }
parking_lot = { workspace = true }
minicbor = { workspace = true }
bincode = { workspace = true }
uplc = { workspace = true }
dugite-lsm = { workspace = true }
rayon = { workspace = true, optional = true }

[features]
default = ["parallel-verification"]
parallel-verification = ["rayon"]

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "utxo_bench"
harness = false
