[package]
name = "dugite-storage"
version.workspace = true
edition.workspace = true
description = "Block and chain storage for Dugite (ImmutableDB chunk files + in-memory VolatileDB)"

[features]
default = []
io-uring = ["dep:io-uring"]

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", optional = true }

[dependencies]
dugite-primitives = { workspace = true }
dugite-serialization = { workspace = true }
dugite-crypto = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crc32fast = { workspace = true }
memmap2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "storage_bench"
harness = false
