[package]
name = "torsten-cli"
version.workspace = true
edition.workspace = true
description = "CLI tool for Torsten Cardano node (cardano-cli compatible)"

[[bin]]
name = "torsten-cli"
path = "src/main.rs"

[dependencies]
torsten-primitives = { workspace = true }
torsten-crypto = { workspace = true }
torsten-serialization = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
bech32 = { workspace = true }
minicbor = { workspace = true }
