[package]
name = "torsten-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive TUI configuration editor for the Torsten Cardano node"

[[bin]]
name = "torsten-config"
path = "src/main.rs"

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
