[package]
name = "torsten-ledger"
version.workspace = true
edition.workspace = true
description = "Ledger rules and UTxO management for Torsten"

[dependencies]
torsten-primitives = { workspace = true }
torsten-crypto = { workspace = true }
torsten-serialization = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
num-bigint = { workspace = true }
num-rational = { workspace = true }
num-traits = { workspace = true }
parking_lot = { workspace = true }
minicbor = { workspace = true }
bincode = { workspace = true }
uplc = { workspace = true }
cardano-lsm = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "utxo_bench"
harness = false
