[package]
name = "torsten-lsm"
version.workspace = true
edition.workspace = true
description = "Pure Rust LSM-tree engine for Torsten on-disk storage"

[features]
# Enable large-scale stress tests that exercise mainnet-scale UTxO workloads
# (100K-1M entries). Kept behind a feature flag because they can take 30-60s.
# Run with: cargo test -p torsten-lsm --features large-tests -- mainnet_scale
large-tests = []

[dependencies]
thiserror = { workspace = true }
crc32fast = { workspace = true }
parking_lot = { workspace = true }
byteorder = { workspace = true }
fs2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

# [[bench]]
# name = "lsm_bench"
# harness = false
