[package]
name = "torsten-node"
version.workspace = true
edition.workspace = true
description = "Torsten Cardano node - main entry point"

[features]
default = []
io-uring = ["torsten-storage/io-uring"]
journald = ["dep:tracing-journald"]

[lib]
name = "torsten_node"
path = "src/lib.rs"

[[bin]]
name = "torsten-node"
path = "src/main.rs"

[dependencies]
torsten-primitives = { workspace = true }
torsten-crypto = { workspace = true }
torsten-serialization = { workspace = true }
torsten-network = { workspace = true }
torsten-consensus = { workspace = true }
torsten-ledger = { workspace = true }
torsten-mempool = { workspace = true }
torsten-storage = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tracing-journald = { workspace = true, optional = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hex.workspace = true
bech32 = { workspace = true }
bs58.workspace = true
base64 = { workspace = true }
chrono = { workspace = true }
minicbor = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
zstd = { workspace = true }
tar = { workspace = true }
indicatif = { workspace = true }
futures-util = { workspace = true }
pallas-addresses = { workspace = true }
pallas-crypto = { workspace = true }
pallas-traverse = { workspace = true }
sha2 = { workspace = true }
memmap2 = { workspace = true }
crc32fast = { workspace = true }
fs2 = { workspace = true }
rayon = { workspace = true }
libc.workspace = true
num-bigint = { workspace = true }
tokio-util = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
