[package]
name = "torsten-storage"
version.workspace = true
edition.workspace = true
description = "Block and chain storage for Torsten (ImmutableDB + VolatileDB)"

[features]
default = []
lsm = ["dep:cardano-lsm"]

[dependencies]
torsten-primitives = { workspace = true }
torsten-serialization = { workspace = true }
torsten-crypto = { workspace = true }
rocksdb = { workspace = true }
cardano-lsm = { workspace = true, optional = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crc32fast = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "storage_bench"
harness = false
